yml/service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: django-app
  sessionAffinity: ClientIP
